infra/knodes-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knodes-backend
  namespace: knodes-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knodes-backend
  template:
    metadata:
      labels:
        app: knodes-backend
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - name: backend
          image: registry.knodes.app/knodes-backend:b5518e1f3f5fad4e99880d1cebee628b394b67d4
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: firebase-secret
              mountPath: /etc/firebase
              readOnly: true
      volumes:
        - name: firebase-secret
          secret:
            secretName: backend-firebase
