infra/knodes-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knodes-backend
  namespace: knodes-backend
spec:
  selector:
    app: knodes-backend
  ports:
    - port: 8000
      targetPort: 8000
